cluster/main.css
body {
  margin: 0;
  font-family: "Helvetica Neue", 'Lato', 'Helvetica', sans-serif;
  overflow:hidden;
}


#mainscreen {
  position: relative;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

#map {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}

#mapSVG {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 100;
  pointer-events: none;
}

#svgPositioner {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  pointer-events: none;
}

#sidebar {
  position: absolute;
  right: 0;
  top: 0;
  height: 100%;
  width: 280px;
  border-left: 2px solid #888;
  z-index: 500;
  background-color: #fff;
}





circle {
  /*fill: rgba(30, 80, 120, 0.8);*/
  /*stroke: #222;*/
  z-index: 2000;
}

circle.single {
  fill: rgba(30, 80, 120, 1);
  stroke: #222;
  z-index: 2000;
}

circle.recommended {
  z-index: 3000;
}

circle.selected {
  stroke-width: 3px;
  stroke: #222;
}

#bubblecursor {
  fill: rgba(40, 115, 152, 0.3);
  stroke: none;
}

path.group {
  opacity: 0.6;
  fill: none;
  stroke: #888;
  stroke-width: 3px;
}

path.highlighted {
  stroke-width: 5px;
  stroke: #444;
}

path.selected {
  stroke: #289cd5;
}

#tooltips {
  z-index: 20000;
}


div.tooltip {
  position: absolute;
  text-align: center;
  width: 60px;
  height: 28px;
  padding: 2px;
  font: 12px sans-serif;
  background: lightsteelblue;
  border: 0;
  border-radius: 8px;
  pointer-events: none;
}

.label {
  font-size: 12px;
  font-weight: bold;
  letter-spacing: 1px;
  text-anchor: bottom;
}

.label {
  fill: #006;
}

.spacer-after::after {
  content: "•";
  color: #999;
  margin: 0 6px;
}

.spacer-before::before {
  content: "•";
  color: #999;
  margin: 0 6px;
}

.no-overflow {
  text-overflow: ellipsis;
}

#rankingSliderContainer {
  position: fixed;
  bottom: 8px;
  left: 50px;
  width: 1000px;
  height: 80px;
  z-index: 5000;
}

#canvasPositioner {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: 50;
  pointer-events: none;
}

#canvasClip {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  overflow: hidden;
}

#canvasContainer {
  position: absolute;
  top: 0;
  left: 0;
}


#popoverPositioner {
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
}
#popoverContainer {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 100%;
  overflow: hidden;
}

#popoverLines {
  position: absolute;
  top: 0;
  left: 0;
  z-index: 500;
  pointer-events: none;
}

.popover-line {
  position: absolute;
  transform-origin: 0 100%;
  -webkit-transform-origin: 0 100%;
  height: 2px;
  background: #000;
  opacity: 0.5;
  z-index: 400;
}

.clusterpop {
  position: absolute;
  z-index: 15000;
  max-width: 300px;
  pointer-events: none;
}

.clusterpop div {
}

.clusterrow {
  padding: 3px 8px;
  background-color: rgba(50, 67, 116, 0.9);
  font-size: 0.9em;
  color: #fff;
}

.selection-popover {
  position: absolute;
  z-index: 20000;
  background-color: rgba(30, 80, 120, 0.9);
  font-size: 0.9em;
  color: #fff;
  border-radius: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
  max-width: 230px;
}

.selection-popover .infobox {
  max-height: 102px;
  padding: 6px 12px;
  overflow: hidden;
}

.selection-popover .header {
  float: left;
}

.selection-popover .title {
  overflow: hidden;
}

.selection-popover .title .name {
  font-size: 1em;
  text-decoration: none;
  font-weight: bold;
  max-height: 3em;
}

.selection-popover .othernodes {
  text-align: right;
  font-size: 0.9em;
  padding-top: 6px;
}

.selection-popover .ratings {
  overflow: hidden;
  margin-top: 4px;
}

.selection-popover .details {
  padding: 12px 12px 0 12px;
  max-height: 3em;
}

.selection-popover .infobox .ratings img {
  height: 12px;
  margin-top: 4px;
  padding: 3px;
  background-color: rgba(255, 255, 255, 0.95);
}

.selection-popover .infobox .ratings .rank {
  margin-right: 10px;
  margin-left: 2px;
  color: #fff;
  top: -4px;
  position: relative;
}

.selection-popover .explanation {
  font-size: 0.9em;
  font-style: italic;
  padding-top: 6px;
}

.selection-popover .reviews {
  margin-left: 8px;
  position: relative;
  top: -4px;
}



.note-popover {
  position: absolute;
  z-index: 400;
  /*background-color: rgba(30, 80, 120, 0.9);*/
  font-size: 0.9em;
  color: #fff;
  border-radius: 5px;
  -moz-border-radius: 5px;
  -webkit-border-radius: 5px;
}

.note-popover .infobox {
  max-height: 72px;
  padding: 6px 12px;
  overflow: hidden;
}

.note-popover .header {
  float: left;
  max-width: 180px;
}

.note-popover .title {
  overflow: hidden;
}

.note-popover .title .name {
  font-size: 1em;
  text-decoration: none;
  font-weight: bold;
  max-height: 3em;
}

.note-popover .infobox .ratings {
  overflow: hidden;
}


.note-popover .expandableContent {
  text-align: center;
  font-size: 0.9em;
}

.note-popover .expandLabel {
  position: absolute;
  bottom: -24px;
  left: 6px;
  width: 30px;
  height: 16px;
  font-weight: bold;
  cursor: pointer;
  padding: 2px 0 6px 0;
  border-radius: 0 0 5px 5px;
  -moz-border-radius: 0 0 5px 5px;
  -webkit-border-radius: 0 0 5px 5px;
}

.note-popover .details {
  padding: 12px 12px 0 12px;
  max-height: 3em;
}

.note-popover .snippetsDrawer {
  font-size: 1em;
  width: 400px;
}

.note-popover .imageContainer {
  width: 400px;
  height: 110px;

}

.leaf-popover {
  position: absolute;
  z-index: 999;
  background-color: #fff;
  border: 2px solid black;
  font-size: 1em;
}

.leaf-popover .expandableContent {
  text-align: center;
  font-size: 0.9em;
  border-top: 1px solid #ddd;
  background-color: #eee;
}

.leaf-popover .expandLabel {
  cursor: pointer;
  padding: 4px 0;
}

.leaf-popover .infobox {
  height: 124px;
  padding: 6px 0 6px 12px;
  overflow: hidden;
}

.leaf-popover .infobox .header {
  float: left;
  max-width: 220px;
}
/* ... */

